[package]
name = "zk-mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3.0", features = ["std"] }
ark-bls12-377 = { version = "0.3.0", features = ["r1cs", "curve"] }
ark-mnt4-753 = "0.3.0"
ark-ff = "0.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
num-bigint = "0.4.3"
ark-groth16 = "0.3.0"
ark-snark = "0.3.0"
ark-ec = "0.3.0"
ark-relations = "0.3.0"
ark-r1cs-std = "0.3.0"
ark-crypto-primitives = { version = "0.3.0", features = ["r1cs"] }
ark-ed-on-bls12-377 = { version = "0.3.0", features = ["r1cs"] }
num-traits = "0.2.14"
ark-poly = "0.3.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"