[package]
name = "zk-mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { path = "arkworks/algebra/ec", version = "0.3.0" }
ark-ff = { path = "arkworks/algebra/ff", version = "0.3.0" }
ark-poly = { path = "arkworks/algebra/poly", version = "0.3.0" }
ark-serialize = { path = "arkworks/algebra/serialize", version = "0.3.0" }

ark-crypto-primitives = { path = "arkworks/crypto-primitives", version = "0.3.0", features = ["r1cs"] }

ark-bls12-377 = { path = "arkworks/curves/bls12_377", version = "0.3.0", features = ["r1cs", "curve"] }
ark-ed-on-bls12-377 = { path = "arkworks/curves/ed_on_bls12_377", version = "0.3.0", features = ["r1cs"] }
ark-mnt4-753 = { path = "arkworks/curves/mnt4_753", version = "0.3.0" }

ark-groth16 = { path = "arkworks/groth16", version = "0.3.0" }

ark-marlin = { path = "arkworks/marlin", version = "0.3.0" }

ark-poly-commit = { path = "arkworks/poly-commit", version = "0.3.0" }

ark-r1cs-std = { path = "arkworks/r1cs-std", version = "0.3.0" }

ark-relations = { path = "arkworks/snark/relations", version = "0.3.0" }
ark-snark = { path = "arkworks/snark/snark", version = "0.3.0" }

ark-std = { path = "arkworks/std", version = "0.3.0", features = ["std", "print-trace"] }

rand = "0.8.5"
rand_distr = "0.4.3"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2.14"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
blake2 = "0.9"
derivative = { version = "2.0", features = ["use_core"]}
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

mpc-algebra = { path = "mpc-algebra", version = "0.1.0" }
mpc-net = { path = "mpc-net", version = "0.1.0" }

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "bin-test-marlin"
path = "src/bin_test_marlin.rs"
