[package]
name = "mpc-algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { path = "../arkworks/algebra/ec", version = "0.3.0" }
ark-ff = { path = "../arkworks/algebra/ff", version = "0.3.0" }
ark-poly = { path = "../arkworks/algebra/poly", version = "0.3.0" }
ark-serialize = { path = "../arkworks/algebra/serialize", version = "0.3.0" }
ark-std = { path = "../arkworks/std", version = "0.3.0", features = ["std"] }

rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
derivative = { version = "2.0", features = ["use_core"]}
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }