[package]
name = "mpc-algebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { path = "../arkworks/algebra/ec", version = "0.3.0" }
ark-ff = { path = "../arkworks/algebra/ff", version = "0.3.0" }
ark-poly = { path = "../arkworks/algebra/poly", version = "0.3.0" }
ark-serialize = { path = "../arkworks/algebra/serialize", version = "0.3.0" }
ark-std = { path = "../arkworks/std", version = "0.3.0", features = ["std", "print-trace"] }
ark-r1cs-std = { path = "../arkworks/r1cs-std", version = "0.3.0", default-features = false, optional = true }
ark-crypto-primitives = { path = "../arkworks/crypto-primitives", version = "0.3.0" }
ark-relations = { path = "../arkworks/snark/relations", version = "^0.3.0", default-features = false }

ark-bls12-377 = { path = "../arkworks/curves/bls12_377", version = "0.3.0" }
ark-ed-on-bls12-377 = { path = "../arkworks/curves/ed_on_bls12_377", version = "0.3.0" }

rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
derivative = { version = "2.0", features = ["use_core"]}
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
log = {version = "0.4"}
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }

mpc-net = { path = "../mpc-net" }
mpc-trait = { path = "../mpc-trait" }

structopt = "0.3"
env_logger = "0.8"
sha2 = "0.9"

[features]
default = ["ark-r1cs-std"]

[[example]]
name = "algebra"
path = "examples/algebra.rs"