[package]
name = "mpc-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { path = "../arkworks/std", version = "0.3.0", features = ["std"] }
async_smux = "0.3.3"
lazy_static = "1.4.0"
log = "0.4.20"
rayon = "1.8.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["sync", "net"] }
tokio-util = { version = "0.7.12", features = ["codec"] }

[dev-dependencies]
env_logger = "0.11.5"
structopt = "0.3.26"
