[package]
name = "ark-pallas"
version = "0.3.0"
authors = [ "Ying Tong Lai", "Daira Hopwood", "O(1) Labs", "arkworks contributors" ]
description = "The Pallas prime-order elliptic curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/ark-pallas/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = { path = "../../algebra/ff", version="^0.3.0", default-features = false }
ark-ec = { path = "../../algebra/ec", version="^0.3.0", default-features = false }
ark-r1cs-std = { path = "../../r1cs-std", version="^0.3.0", default-features = false, optional = true }
ark-std = { path = "../../std", version="^0.3.0", default-features = false }

[dev-dependencies]
ark-relations = { path = "../../snark/relations", version="^0.3.0", default-features = false }
ark-serialize = { path = "../../algebra/serialize", version="^0.3.0", default-features = false }
ark-algebra-test-templates = { path = "../../algebra/test-templates", version="^0.3.0", default-features = false }
ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-features = false }

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []
r1cs = [ "base_field", "ark-r1cs-std" ]
